0.24.5	2025-10-15

 * Fix HTTP authentication to preserve credentials from URLs when storing
   remote configuration. URLs with embedded credentials (like
   ``https://token@github.com/user/repo.git``) now correctly save those
   credentials to git config, allowing subsequent push operations to succeed.
   (Jelmer Vernooĳ, #1925)

0.24.4	2025-10-14

 * Add compatibility for Python 3.14.  (Jelmer Vernooĳ)

 * Re-enable android build. (Malcolm Smith)

0.24.3	2025-10-12

 * Add ``dulwich merge-base`` command. (Jelmer Vernooĳ, #1831)

 * Add support for ``git var`` command to display Git's logical variables
   (GIT_AUTHOR_IDENT, GIT_COMMITTER_IDENT, GIT_EDITOR, GIT_SEQUENCE_EDITOR,
   GIT_PAGER, GIT_DEFAULT_BRANCH). Available as ``porcelain.var()`` and
   ``dulwich var`` CLI command. (Jelmer Vernooĳ, #1841)

 * Add support for ``GIT_TRACE`` environment variable for debugging. Supports
   output to stderr (values "1", "2", or "true"), file descriptors (3-9),
   file paths, and directories (creates per-process trace files).
   (Jelmer Vernooĳ, #1863)

 * Add ``extract_signature()`` method to ``Commit`` and ``Tag`` classes that
   returns (payload, signature, signature_type) tuple. Supports both PGP and SSH
   signature detection. (Jelmer Vernooĳ)

 * Fix Git filter protocol implementation to properly handle the two-phase
   response format (initial headers, content, final headers) as specified in
   the Git protocol documentation. This fixes compatibility with Git LFS and
   other filters that send status messages in final headers.
   (Jelmer Vernooĳ, #1889)

 * Add ``git worktree repair`` command to repair worktree administrative files
   after worktrees or the main repository have been moved.
   (Jelmer Vernooĳ, #1799)

 * Add ``dulwich verify-tag`` command to check GPG signatures of tags.
   (Jelmer Vernooĳ, #1833)

 * Add ``dulwich verify-commit`` command to check GPG signatures of tags.
   (Jelmer Vernooĳ, #1832)

0.24.2	2025-09-25
